// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic 1`] = `
"
import styles from './styles.css';

styles.foo + ' ' + styles.bar;

<div className={styles.foo + ' ' + styles.bar} />;"
`;

exports[`custom-import-name 1`] = `
"
import styles from '../styles.css';

styles.foo + ' ' + styles.bar;

<div className={styles.foo + ' ' + styles.bar} />;"
`;

exports[`falsy-values 1`] = `
"

'';
'foo ' + 1;"
`;

exports[`object-expression 1`] = `
"
import styles from './styles.css';

'foo ' + 'bar';
'foo-bar';
'foo ' + 'bar';
'foo ' + 'bar';
'foo ' + '';
styles.foo + ' ' + styles.bar;"
`;

exports[`other-classnames 1`] = `
"import styles from './styles.css';

function classnames() {}

classnames(styles.foo, styles.bar);

<div className={classnames(styles.foo, styles.bar)} />;"
`;

exports[`string-literal 1`] = `
"
import styles from './styles.css';

'global ' + (styles.foo + ' ' + styles.bar);

<div className={styles.foo + ' ' + ('global ' + styles.bar)} />;"
`;
